--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "prisma-client-lib": "1.26.6"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js -w"
   }
 }
