--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "graphql-yoga": "^1.16.1",
+    "jsonwebtoken": "^8.5.1",
     "prisma-client-lib": "1.26.6"
   },
   "scripts": {
