--- a/prisma.yml
+++ b/prisma.yml
@@ -8,7 +8,7 @@ datamodel: models/datamodel.prisma
 # Specifies the language and directory for the generated Prisma client.
 generate:
   - generator: javascript-client
-    output: ../src/generated/prisma-client/
+    output: ./src/generated/prisma-client/
 
 # Ensures Prisma client is re-generated after a datamodel change.
 hooks:
